@@ -1,5 +1,10 @@
 2007-09-26  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-directory-async.c:
+	Read top left text with gio
+
+2007-09-26  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-ditem-page.c:
 	Use g_file_load_contents_async instead of
 	eel_read_entire_file_async.
